// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normal structure 1`] = `
ConcatSource {
  "children": Array [
    RawSource {
      "_value": Object {
        "data": Array [
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          34,
          32,
          100,
          97,
          116,
          97,
          45,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          45,
          105,
          100,
          61,
          34,
          123,
          123,
          32,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          46,
          105,
          100,
          32,
          125,
          125,
          34,
          32,
          100,
          97,
          116,
          97,
          45,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          45,
          116,
          121,
          112,
          101,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          45,
          116,
          101,
          109,
          112,
          108,
          97,
          116,
          101,
          34,
          62,
          10,
          10,
          32,
          32,
          123,
          37,
          32,
          105,
          102,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          105,
          109,
          97,
          103,
          101,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          45,
          104,
          101,
          97,
          100,
          101,
          114,
          45,
          105,
          109,
          97,
          103,
          101,
          45,
          119,
          114,
          97,
          112,
          112,
          101,
          114,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          45,
          104,
          101,
          97,
          100,
          101,
          114,
          45,
          105,
          109,
          97,
          103,
          101,
          123,
          37,
          32,
          105,
          102,
          32,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          46,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          105,
          109,
          97,
          103,
          101,
          95,
          112,
          97,
          114,
          97,
          108,
          108,
          97,
          120,
          32,
          37,
          125,
          32,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          45,
          104,
          101,
          97,
          100,
          101,
          114,
          45,
          105,
          109,
          97,
          103,
          101,
          45,
          45,
          112,
          97,
          114,
          97,
          108,
          108,
          97,
          120,
          123,
          37,
          32,
          101,
          110,
          100,
          105,
          102,
          32,
          37,
          125,
          32,
          108,
          97,
          122,
          121,
          108,
          111,
          97,
          100,
          34,
          32,
          100,
          97,
          116,
          97,
          45,
          98,
          103,
          115,
          101,
          116,
          61,
          34,
          123,
          37,
          32,
          105,
          110,
          99,
          108,
          117,
          100,
          101,
          32,
          39,
          98,
          103,
          115,
          101,
          116,
          39,
          44,
          32,
          105,
          109,
          97,
          103,
          101,
          58,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          105,
          109,
          97,
          103,
          101,
          32,
          37,
          125,
          34,
          62,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          110,
          111,
          115,
          99,
          114,
          105,
          112,
          116,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          45,
          104,
          101,
          97,
          100,
          101,
          114,
          45,
          105,
          109,
          97,
          103,
          101,
          34,
          32,
          115,
          116,
          121,
          108,
          101,
          61,
          34,
          98,
          97,
          99,
          107,
          103,
          114,
          111,
          117,
          110,
          100,
          45,
          105,
          109,
          97,
          103,
          101,
          58,
          32,
          123,
          123,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          105,
          109,
          97,
          103,
          101,
          32,
          124,
          32,
          105,
          109,
          103,
          95,
          117,
          114,
          108,
          58,
          32,
          39,
          109,
          97,
          115,
          116,
          101,
          114,
          39,
          32,
          125,
          125,
          34,
          62,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          110,
          111,
          115,
          99,
          114,
          105,
          112,
          116,
          62,
          10,
          32,
          32,
          32,
          32,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          32,
          32,
          123,
          37,
          32,
          101,
          110,
          100,
          105,
          102,
          32,
          37,
          125,
          10,
          10,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          112,
          97,
          103,
          101,
          45,
          119,
          105,
          100,
          116,
          104,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          119,
          114,
          97,
          112,
          112,
          101,
          114,
          32,
          103,
          114,
          105,
          100,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          99,
          111,
          110,
          116,
          101,
          110,
          116,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          99,
          111,
          110,
          116,
          101,
          110,
          116,
          45,
          45,
          108,
          97,
          114,
          103,
          101,
          32,
          103,
          114,
          105,
          100,
          95,
          95,
          105,
          116,
          101,
          109,
          32,
          109,
          101,
          100,
          105,
          117,
          109,
          45,
          117,
          112,
          45,
          45,
          116,
          101,
          110,
          45,
          116,
          119,
          101,
          108,
          102,
          116,
          104,
          115,
          32,
          109,
          101,
          100,
          105,
          117,
          109,
          45,
          117,
          112,
          45,
          45,
          112,
          117,
          115,
          104,
          45,
          111,
          110,
          101,
          45,
          116,
          119,
          101,
          108,
          102,
          116,
          104,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          104,
          101,
          97,
          100,
          101,
          114,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          104,
          101,
          97,
          100,
          101,
          114,
          32,
          115,
          101,
          112,
          97,
          114,
          97,
          116,
          111,
          114,
          34,
          32,
          100,
          97,
          116,
          97,
          45,
          97,
          110,
          105,
          109,
          97,
          116,
          101,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          105,
          102,
          32,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          46,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          111,
          119,
          95,
          100,
          97,
          116,
          101,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          115,
          112,
          97,
          110,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          100,
          97,
          116,
          101,
          32,
          116,
          101,
          120,
          116,
          45,
          115,
          109,
          97,
          108,
          108,
          45,
          45,
          117,
          112,
          112,
          101,
          114,
          99,
          97,
          115,
          101,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          123,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          112,
          117,
          98,
          108,
          105,
          115,
          104,
          101,
          100,
          95,
          97,
          116,
          32,
          124,
          32,
          116,
          105,
          109,
          101,
          95,
          116,
          97,
          103,
          58,
          32,
          102,
          111,
          114,
          109,
          97,
          116,
          58,
          32,
          39,
          109,
          111,
          110,
          116,
          104,
          95,
          100,
          97,
          121,
          95,
          121,
          101,
          97,
          114,
          39,
          32,
          125,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          115,
          112,
          97,
          110,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          101,
          110,
          100,
          105,
          102,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          105,
          102,
          32,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          46,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          111,
          119,
          95,
          97,
          117,
          116,
          104,
          111,
          114,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          115,
          112,
          97,
          110,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          97,
          117,
          116,
          104,
          111,
          114,
          32,
          116,
          101,
          120,
          116,
          45,
          115,
          109,
          97,
          108,
          108,
          45,
          45,
          117,
          112,
          112,
          101,
          114,
          99,
          97,
          115,
          101,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          123,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          97,
          117,
          116,
          104,
          111,
          114,
          32,
          125,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          115,
          112,
          97,
          110,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          101,
          110,
          100,
          105,
          102,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          104,
          49,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          116,
          105,
          116,
          108,
          101,
          32,
          104,
          50,
          34,
          62,
          123,
          123,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          116,
          105,
          116,
          108,
          101,
          32,
          125,
          125,
          60,
          47,
          104,
          49,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          104,
          101,
          97,
          100,
          101,
          114,
          62,
          10,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          98,
          111,
          100,
          121,
          32,
          114,
          116,
          101,
          34,
          32,
          105,
          116,
          101,
          109,
          112,
          114,
          111,
          112,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          66,
          111,
          100,
          121,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          123,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          99,
          111,
          110,
          116,
          101,
          110,
          116,
          32,
          125,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          105,
          102,
          32,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          46,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          111,
          119,
          95,
          115,
          104,
          97,
          114,
          101,
          95,
          98,
          117,
          116,
          116,
          111,
          110,
          115,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          105,
          102,
          32,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          97,
          114,
          101,
          95,
          102,
          97,
          99,
          101,
          98,
          111,
          111,
          107,
          32,
          111,
          114,
          32,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          97,
          114,
          101,
          95,
          116,
          119,
          105,
          116,
          116,
          101,
          114,
          32,
          111,
          114,
          32,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          97,
          114,
          101,
          95,
          112,
          105,
          110,
          116,
          101,
          114,
          101,
          115,
          116,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          115,
          104,
          97,
          114,
          101,
          45,
          100,
          101,
          115,
          107,
          116,
          111,
          112,
          32,
          103,
          114,
          105,
          100,
          95,
          95,
          105,
          116,
          101,
          109,
          32,
          109,
          101,
          100,
          105,
          117,
          109,
          45,
          117,
          112,
          45,
          45,
          116,
          119,
          111,
          45,
          116,
          119,
          101,
          108,
          102,
          116,
          104,
          115,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          115,
          104,
          97,
          114,
          101,
          45,
          100,
          101,
          115,
          107,
          116,
          111,
          112,
          45,
          119,
          114,
          97,
          112,
          112,
          101,
          114,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          105,
          110,
          99,
          108,
          117,
          100,
          101,
          32,
          39,
          115,
          111,
          99,
          105,
          97,
          108,
          45,
          115,
          104,
          97,
          114,
          105,
          110,
          103,
          39,
          44,
          32,
          116,
          121,
          112,
          101,
          58,
          32,
          39,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          39,
          44,
          32,
          115,
          104,
          97,
          114,
          101,
          95,
          116,
          105,
          116,
          108,
          101,
          58,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          116,
          105,
          116,
          108,
          101,
          44,
          32,
          115,
          104,
          97,
          114,
          101,
          95,
          112,
          101,
          114,
          109,
          97,
          108,
          105,
          110,
          107,
          58,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          117,
          114,
          108,
          44,
          32,
          115,
          104,
          97,
          114,
          101,
          95,
          105,
          109,
          97,
          103,
          101,
          58,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          105,
          109,
          97,
          103,
          101,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          101,
          110,
          100,
          105,
          102,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          101,
          110,
          100,
          105,
          102,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          32,
          32,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          10,
          32,
          32,
          123,
          37,
          32,
          105,
          102,
          32,
          115,
          101,
          99,
          116,
          105,
          111,
          110,
          46,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          111,
          119,
          95,
          115,
          104,
          97,
          114,
          101,
          95,
          98,
          117,
          116,
          116,
          111,
          110,
          115,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          105,
          102,
          32,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          97,
          114,
          101,
          95,
          102,
          97,
          99,
          101,
          98,
          111,
          111,
          107,
          32,
          111,
          114,
          32,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          97,
          114,
          101,
          95,
          116,
          119,
          105,
          116,
          116,
          101,
          114,
          32,
          111,
          114,
          32,
          115,
          101,
          116,
          116,
          105,
          110,
          103,
          115,
          46,
          115,
          104,
          97,
          114,
          101,
          95,
          112,
          105,
          110,
          116,
          101,
          114,
          101,
          115,
          116,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          100,
          105,
          118,
          32,
          99,
          108,
          97,
          115,
          115,
          61,
          34,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          95,
          95,
          115,
          104,
          97,
          114,
          101,
          45,
          109,
          111,
          98,
          105,
          108,
          101,
          34,
          62,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          105,
          110,
          99,
          108,
          117,
          100,
          101,
          32,
          39,
          115,
          111,
          99,
          105,
          97,
          108,
          45,
          115,
          104,
          97,
          114,
          105,
          110,
          103,
          39,
          44,
          32,
          116,
          121,
          112,
          101,
          58,
          32,
          39,
          109,
          111,
          98,
          105,
          108,
          101,
          39,
          44,
          32,
          115,
          104,
          97,
          114,
          101,
          95,
          116,
          105,
          116,
          108,
          101,
          58,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          116,
          105,
          116,
          108,
          101,
          44,
          32,
          115,
          104,
          97,
          114,
          101,
          95,
          112,
          101,
          114,
          109,
          97,
          108,
          105,
          110,
          107,
          58,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          117,
          114,
          108,
          44,
          32,
          115,
          104,
          97,
          114,
          101,
          95,
          105,
          109,
          97,
          103,
          101,
          58,
          32,
          97,
          114,
          116,
          105,
          99,
          108,
          101,
          46,
          105,
          109,
          97,
          103,
          101,
          32,
          37,
          125,
          10,
          32,
          32,
          32,
          32,
          32,
          32,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
          32,
          32,
          32,
          32,
          123,
          37,
          32,
          101,
          110,
          100,
          105,
          102,
          32,
          37,
          125,
          10,
          32,
          32,
          123,
          37,
          32,
          101,
          110,
          100,
          105,
          102,
          32,
          37,
          125,
          10,
          60,
          47,
          100,
          105,
          118,
          62,
          10,
        ],
        "type": "Buffer",
      },
    },
    RawSource {
      "_value": "{% schema %}
 {
  \\"name\\": {
    \\"de\\": \\"Posts\\",
    \\"en\\": \\"Posts\\",
    \\"es\\": \\"Publicaciones\\",
    \\"fr\\": \\"Articles\\",
    \\"it\\": \\"Articoli\\",
    \\"ja\\": \\"投稿\\",
    \\"pt-BR\\": \\"posts\\"
  },
  \\"settings\\": [
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"image_parallax\\",
      \\"label\\": {
        \\"de\\": \\"Parallax-Animation für Bild anzeigen\\",
        \\"en\\": \\"Show image parallax animation\\",
        \\"es\\": \\"Mostrar animación de paralaje de imagen\\",
        \\"fr\\": \\"Afficher l'animation en parallaxe\\",
        \\"it\\": \\"Mostra animazione parallasse immagine\\",
        \\"ja\\": \\"画像のパララックスアニメーションを表示する\\",
        \\"pt-BR\\": \\"Exibir animação de paralaxe da imagem\\"
      },
      \\"info\\": {
        \\"de\\": \\"Wird nur auf dem Desktop angezeigt\\",
        \\"en\\": \\"Only shows on desktop\\",
        \\"es\\": \\"Solo se muestra en el escritorio\\",
        \\"fr\\": \\"Ne s'affiche que sur le bureau\\",
        \\"it\\": \\"Appare solo su desktop\\",
        \\"ja\\": \\"デスクトップにのみ表示する\\",
        \\"pt-BR\\": \\"Aparece apenas na área de trabalho\\"
      }
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"show_date\\",
      \\"label\\": {
        \\"de\\": \\"Datum anzeigen\\",
        \\"en\\": \\"Show date\\",
        \\"es\\": \\"Mostrar fecha\\",
        \\"fr\\": \\"Afficher la date\\",
        \\"it\\": \\"Mostra data\\",
        \\"ja\\": \\"日付を表示する\\",
        \\"pt-BR\\": \\"Exibir data\\"
      },
      \\"default\\": true
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"show_author\\",
      \\"label\\": {
        \\"de\\": \\"Autor anzeigen\\",
        \\"en\\": \\"Show author\\",
        \\"es\\": \\"Mostrar autor\\",
        \\"fr\\": \\"Afficher l'auteur\\",
        \\"it\\": \\"Mostra autore\\",
        \\"ja\\": \\"執筆者を表示する\\",
        \\"pt-BR\\": \\"Exibir autor(a)\\"
      },
      \\"default\\": false
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"show_share_buttons\\",
      \\"label\\": {
        \\"de\\": \\"Teilen von Blog-Beiträgen aktivieren\\",
        \\"en\\": \\"Enable sharing for blog articles\\",
        \\"es\\": \\"Habilitar el uso compartido de artículos de blog\\",
        \\"fr\\": \\"Activer le partage pour les articles de blog\\",
        \\"it\\": \\"Abilita condivisione per gli articoli del blog\\",
        \\"ja\\": \\"ブログ記事の共有を有効にする\\",
        \\"pt-BR\\": \\"Ativar compartilhamento para artigos de blog\\"
      },
      \\"info\\": {
        \\"de\\": \\"Vergewissern Sie sich, dass Sie in den allgemeinen Einstellungen das Teilen in sozialen Netzwerken aktiviert haben\\",
        \\"en\\": \\"Make sure you have enabled social sharing in general settings\\",
        \\"es\\": \\"Asegúrate de haber habilitado la opción para compartir en redes sociales en la configuración general.\\",
        \\"fr\\": \\"Assurez-vous d'avoir activé le partage social dans les paramètres généraux\\",
        \\"it\\": \\"Assicurati di aver abilitato la condivisione sui social nelle impostazioni generali\\",
        \\"ja\\": \\"一般設定でソーシャル共有を有効にしていることを確認してください。\\",
        \\"pt-BR\\": \\"Verifique se você habilitou o compartilhamento em redes sociais nas configurações gerais\\"
      },
      \\"default\\": true
    }
  ]
}{% endschema %}",
    },
  ],
  "emitted": true,
  "existsAt": "/Users/harshalbrahmbhatt/src/github.com/Shopify/slate/packages/slate-locales-plugin/__tests__/dist/sections/test-section.liquid",
}
`;

exports[`normal structure 2`] = `
"<div class=\\"article\\" data-section-id=\\"{{ section.id }}\\" data-section-type=\\"article-template\\">

  {% if article.image %}
    <div class=\\"section-header-image-wrapper\\">
      <div class=\\"section-header-image{% if section.settings.image_parallax %} section-header-image--parallax{% endif %} lazyload\\" data-bgset=\\"{% include 'bgset', image: article.image %}\\"></div>

      <noscript>
        <div class=\\"section-header-image\\" style=\\"background-image: {{ article.image | img_url: 'master' }}\\"></div>
      </noscript>
    </div>
  {% endif %}

  <div class=\\"page-width\\">
    <div class=\\"article__wrapper grid\\">
      <div class=\\"article__content article__content--large grid__item medium-up--ten-twelfths medium-up--push-one-twelfth\\">
        <header class=\\"article__header separator\\" data-animate>
          {% if section.settings.show_date %}
            <span class=\\"article__date text-small--uppercase\\">
              {{ article.published_at | time_tag: format: 'month_day_year' }}
            </span>
          {% endif %}
          {% if section.settings.show_author %}
            <span class=\\"article__author text-small--uppercase\\">
              {{ article.author }}
            </span>
          {% endif %}
          <h1 class=\\"article__title h2\\">{{ article.title }}</h1>
        </header>

        <div class=\\"article__body rte\\" itemprop=\\"articleBody\\">
          {{ article.content }}
        </div>
      </div>

      {% if section.settings.show_share_buttons %}
        {% if settings.share_facebook or settings.share_twitter or settings.share_pinterest %}
          <div class=\\"article__share-desktop grid__item medium-up--two-twelfths\\">
            <div class=\\"article__share-desktop-wrapper\\">
              {% include 'social-sharing', type: 'article', share_title: article.title, share_permalink: article.url, share_image: article.image %}
            </div>
          </div>
        {% endif %}
      {% endif %}
    </div>
  </div>

  {% if section.settings.show_share_buttons %}
    {% if settings.share_facebook or settings.share_twitter or settings.share_pinterest %}
      <div class=\\"article__share-mobile\\">
          {% include 'social-sharing', type: 'mobile', share_title: article.title, share_permalink: article.url, share_image: article.image %}
      </div>
    {% endif %}
  {% endif %}
</div>
{% schema %}
 {
  \\"name\\": {
    \\"de\\": \\"Posts\\",
    \\"en\\": \\"Posts\\",
    \\"es\\": \\"Publicaciones\\",
    \\"fr\\": \\"Articles\\",
    \\"it\\": \\"Articoli\\",
    \\"ja\\": \\"投稿\\",
    \\"pt-BR\\": \\"posts\\"
  },
  \\"settings\\": [
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"image_parallax\\",
      \\"label\\": {
        \\"de\\": \\"Parallax-Animation für Bild anzeigen\\",
        \\"en\\": \\"Show image parallax animation\\",
        \\"es\\": \\"Mostrar animación de paralaje de imagen\\",
        \\"fr\\": \\"Afficher l'animation en parallaxe\\",
        \\"it\\": \\"Mostra animazione parallasse immagine\\",
        \\"ja\\": \\"画像のパララックスアニメーションを表示する\\",
        \\"pt-BR\\": \\"Exibir animação de paralaxe da imagem\\"
      },
      \\"info\\": {
        \\"de\\": \\"Wird nur auf dem Desktop angezeigt\\",
        \\"en\\": \\"Only shows on desktop\\",
        \\"es\\": \\"Solo se muestra en el escritorio\\",
        \\"fr\\": \\"Ne s'affiche que sur le bureau\\",
        \\"it\\": \\"Appare solo su desktop\\",
        \\"ja\\": \\"デスクトップにのみ表示する\\",
        \\"pt-BR\\": \\"Aparece apenas na área de trabalho\\"
      }
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"show_date\\",
      \\"label\\": {
        \\"de\\": \\"Datum anzeigen\\",
        \\"en\\": \\"Show date\\",
        \\"es\\": \\"Mostrar fecha\\",
        \\"fr\\": \\"Afficher la date\\",
        \\"it\\": \\"Mostra data\\",
        \\"ja\\": \\"日付を表示する\\",
        \\"pt-BR\\": \\"Exibir data\\"
      },
      \\"default\\": true
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"show_author\\",
      \\"label\\": {
        \\"de\\": \\"Autor anzeigen\\",
        \\"en\\": \\"Show author\\",
        \\"es\\": \\"Mostrar autor\\",
        \\"fr\\": \\"Afficher l'auteur\\",
        \\"it\\": \\"Mostra autore\\",
        \\"ja\\": \\"執筆者を表示する\\",
        \\"pt-BR\\": \\"Exibir autor(a)\\"
      },
      \\"default\\": false
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"show_share_buttons\\",
      \\"label\\": {
        \\"de\\": \\"Teilen von Blog-Beiträgen aktivieren\\",
        \\"en\\": \\"Enable sharing for blog articles\\",
        \\"es\\": \\"Habilitar el uso compartido de artículos de blog\\",
        \\"fr\\": \\"Activer le partage pour les articles de blog\\",
        \\"it\\": \\"Abilita condivisione per gli articoli del blog\\",
        \\"ja\\": \\"ブログ記事の共有を有効にする\\",
        \\"pt-BR\\": \\"Ativar compartilhamento para artigos de blog\\"
      },
      \\"info\\": {
        \\"de\\": \\"Vergewissern Sie sich, dass Sie in den allgemeinen Einstellungen das Teilen in sozialen Netzwerken aktiviert haben\\",
        \\"en\\": \\"Make sure you have enabled social sharing in general settings\\",
        \\"es\\": \\"Asegúrate de haber habilitado la opción para compartir en redes sociales en la configuración general.\\",
        \\"fr\\": \\"Assurez-vous d'avoir activé le partage social dans les paramètres généraux\\",
        \\"it\\": \\"Assicurati di aver abilitato la condivisione sui social nelle impostazioni generali\\",
        \\"ja\\": \\"一般設定でソーシャル共有を有効にしていることを確認してください。\\",
        \\"pt-BR\\": \\"Verifique se você habilitou o compartilhamento em redes sociais nas configurações gerais\\"
      },
      \\"default\\": true
    }
  ]
}{% endschema %}"
`;

exports[`seperate json files 1`] = `
Object {
  "../sections/blog-posts.liquid": ConcatSource {
    "children": Array [
      RawSource {
        "_value": "{%- comment -%}
  This is a required section for the Shopify Theme Store.
  It is available when you add \\"Blog posts\\" section in the Theme Editor.

  Theme Store required settings
  - Heading: title of the blog posts section
  - Blog (which blog category to show in your store)

  Theme Store optional settings
  - Number of posts to show
  - Show author
  - Show date
{%- endcomment -%}
<section>
  {% if section.settings.title != blank %}
    <h2>{{ section.settings.title | escape }}</h2>
  {% endif %}

  {%- assign blog = blogs[section.settings.blog] -%}

  {%- comment -%}
    Due to accessibility requirements, the Blog entries list functions
    as a list of content items. Non-visual users will expect lists of content
    to appear in a list structure, allowing for easier understanding and navigation of list items.
  {%- endcomment -%}
  <ul class=\\"blog-post\\">
    {% for article in blog.articles limit: section.settings.post_limit %}
      <li class=\\"blog-post__item\\">
        {%- comment -%}
          Due to accessibility requirements, we are regrouping all logical elements into the <a> element.
          If a screen reader user is tabbing through the page, or browsing by links on the page with duplicated links,
          they will appear identical which may lead to a confusing user experience.
        {%- endcomment -%}
        <a href=\\"{{ article.url }}\\">
          {% if article.image %}
            {% include 'responsive-image' with
                image: article.image,
                max_width: 400,
                max_height: 400
            %}
          {% endif %}
          <h3>{{ article.title }}</h3>
        </a>

        <div>
          {% if section.settings.blog_show_author %}
            <span>{{ 'blogs.article.by_author' | t: author: article.author }}</span>
          {% endif %}

          {% if section.settings.blog_show_date %}
            <p>
              {{ article.published_at | time_tag: format: 'month_day_year' }}
            </p>
          {% endif %}

          <div>
            {% if article.excerpt.size > 0 %}
              {{ article.excerpt }}
            {% else %}
              {{ article.content | strip_html | truncate: 150 }}
            {% endif %}
          </div>

          {% if article.tags.size > 0 %}
            {%- comment -%}
              The Tag link list functions as a list of content items.
              Non-visual users will expect lists of content to appear
              in a list structure, allowing for easier understanding and navigation of list items.
            {%- endcomment -%}
            <ul aria-label=\\"{{ 'blogs.article.tags' | t }}\\">
              {% for tag in article.tags %}
                <li><a href=\\"{{ blog.url }}/tagged/{{ tag | handle }}\\">{{ tag }}</a></li>
              {% endfor %}
            </ul>
          {% endif %}

          <a href=\\"{{ article.url }}\\" aria-label=\\"{{ 'blogs.article.read_more_title' | t: title: article.title }}\\">{{ 'blogs.article.read_more' | t }}</a>
        </div>
      </li>
    {% else %}
      {% for i in (1..section.settings.post_limit) %}
        <li class=\\"blog-post__item\\">
          <h3>
            <a href=\\"#\\">{{ 'homepage.onboarding.blog_title' | t }}</a>
          </h3>

          {% if section.settings.blog_show_author %}
            <span>{{ 'homepage.onboarding.blog_author' | t }}</span>
          {% endif %}

          <div>{{ 'homepage.onboarding.blog_excerpt' | t }}</div>

          <a href=\\"#\\">{{ 'blogs.article.read_more' | t }}</a>
        </li>
      {% endfor %}
    {% endfor %}
  </ul>
</section>
",
      },
      RawSource {
        "_value": "{% schema %}
{
  \\"name\\": \\"Blog posts\\",
  \\"settings\\": [
    {
      \\"type\\": \\"text\\",
      \\"id\\": \\"title\\",
      \\"label\\": \\"Heading\\",
      \\"default\\": \\"Blog posts\\"
    },
    {
      \\"id\\": \\"blog\\",
      \\"type\\": \\"blog\\",
      \\"label\\": \\"Blog\\"
    },
    {
      \\"type\\": \\"range\\",
      \\"id\\": \\"post_limit\\",
      \\"label\\": \\"Posts\\",
      \\"min\\": 3,
      \\"max\\": 12,
      \\"step\\": 3,
      \\"default\\": 3
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"blog_show_author\\",
      \\"label\\": \\"Show author\\",
      \\"default\\": false
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"blog_show_date\\",
      \\"label\\": \\"Show date\\",
      \\"default\\": true
    }
  ],
  \\"presets\\": [
    {
      \\"name\\": \\"Blog posts\\",
      \\"category\\": \\"Blog\\",
      \\"settings\\": {
        \\"blog\\": \\"News\\",
        \\"post_limit\\": 3
      }
    }
  ]
}
{% endschema %}",
      },
    ],
    "emitted": true,
    "existsAt": "/Users/harshalbrahmbhatt/src/github.com/Shopify/slate/packages/slate-locales-plugin/__tests__/dist/sections/blog-posts.liquid",
  },
  "main.js": RawSource {
    "_value": "!function(e){var t={};function r(n){if(t[n])return t[n].exports;var o=t[n]={i:n,l:!1,exports:{}};return e[n].call(o.exports,o,o.exports,r),o.l=!0,o.exports}r.m=e,r.c=t,r.d=function(e,t,n){r.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:n})},r.r=function(e){\\"undefined\\"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:!0})},r.t=function(e,t){if(1&t&&(e=r(e)),8&t)return e;if(4&t&&\\"object\\"==typeof e&&e&&e.__esModule)return e;var n=Object.create(null);if(r.r(n),Object.defineProperty(n,\\"default\\",{enumerable:!0,value:e}),2&t&&\\"string\\"!=typeof e)for(var o in e)r.d(n,o,function(t){return e[t]}.bind(null,o));return n},r.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return r.d(t,\\"a\\",t),t},r.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},r.p=\\"\\",r(r.s=0)}([function(e,t){}]);",
    "emitted": true,
    "existsAt": "/Users/harshalbrahmbhatt/src/github.com/Shopify/slate/packages/slate-locales-plugin/__tests__/dist/assets/main.js",
  },
}
`;

exports[`seperate json files 2`] = `
"{%- comment -%}
  This is a required section for the Shopify Theme Store.
  It is available when you add \\"Blog posts\\" section in the Theme Editor.

  Theme Store required settings
  - Heading: title of the blog posts section
  - Blog (which blog category to show in your store)

  Theme Store optional settings
  - Number of posts to show
  - Show author
  - Show date
{%- endcomment -%}
<section>
  {% if section.settings.title != blank %}
    <h2>{{ section.settings.title | escape }}</h2>
  {% endif %}

  {%- assign blog = blogs[section.settings.blog] -%}

  {%- comment -%}
    Due to accessibility requirements, the Blog entries list functions
    as a list of content items. Non-visual users will expect lists of content
    to appear in a list structure, allowing for easier understanding and navigation of list items.
  {%- endcomment -%}
  <ul class=\\"blog-post\\">
    {% for article in blog.articles limit: section.settings.post_limit %}
      <li class=\\"blog-post__item\\">
        {%- comment -%}
          Due to accessibility requirements, we are regrouping all logical elements into the <a> element.
          If a screen reader user is tabbing through the page, or browsing by links on the page with duplicated links,
          they will appear identical which may lead to a confusing user experience.
        {%- endcomment -%}
        <a href=\\"{{ article.url }}\\">
          {% if article.image %}
            {% include 'responsive-image' with
                image: article.image,
                max_width: 400,
                max_height: 400
            %}
          {% endif %}
          <h3>{{ article.title }}</h3>
        </a>

        <div>
          {% if section.settings.blog_show_author %}
            <span>{{ 'blogs.article.by_author' | t: author: article.author }}</span>
          {% endif %}

          {% if section.settings.blog_show_date %}
            <p>
              {{ article.published_at | time_tag: format: 'month_day_year' }}
            </p>
          {% endif %}

          <div>
            {% if article.excerpt.size > 0 %}
              {{ article.excerpt }}
            {% else %}
              {{ article.content | strip_html | truncate: 150 }}
            {% endif %}
          </div>

          {% if article.tags.size > 0 %}
            {%- comment -%}
              The Tag link list functions as a list of content items.
              Non-visual users will expect lists of content to appear
              in a list structure, allowing for easier understanding and navigation of list items.
            {%- endcomment -%}
            <ul aria-label=\\"{{ 'blogs.article.tags' | t }}\\">
              {% for tag in article.tags %}
                <li><a href=\\"{{ blog.url }}/tagged/{{ tag | handle }}\\">{{ tag }}</a></li>
              {% endfor %}
            </ul>
          {% endif %}

          <a href=\\"{{ article.url }}\\" aria-label=\\"{{ 'blogs.article.read_more_title' | t: title: article.title }}\\">{{ 'blogs.article.read_more' | t }}</a>
        </div>
      </li>
    {% else %}
      {% for i in (1..section.settings.post_limit) %}
        <li class=\\"blog-post__item\\">
          <h3>
            <a href=\\"#\\">{{ 'homepage.onboarding.blog_title' | t }}</a>
          </h3>

          {% if section.settings.blog_show_author %}
            <span>{{ 'homepage.onboarding.blog_author' | t }}</span>
          {% endif %}

          <div>{{ 'homepage.onboarding.blog_excerpt' | t }}</div>

          <a href=\\"#\\">{{ 'blogs.article.read_more' | t }}</a>
        </li>
      {% endfor %}
    {% endfor %}
  </ul>
</section>
{% schema %}
{
  \\"name\\": \\"Blog posts\\",
  \\"settings\\": [
    {
      \\"type\\": \\"text\\",
      \\"id\\": \\"title\\",
      \\"label\\": \\"Heading\\",
      \\"default\\": \\"Blog posts\\"
    },
    {
      \\"id\\": \\"blog\\",
      \\"type\\": \\"blog\\",
      \\"label\\": \\"Blog\\"
    },
    {
      \\"type\\": \\"range\\",
      \\"id\\": \\"post_limit\\",
      \\"label\\": \\"Posts\\",
      \\"min\\": 3,
      \\"max\\": 12,
      \\"step\\": 3,
      \\"default\\": 3
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"blog_show_author\\",
      \\"label\\": \\"Show author\\",
      \\"default\\": false
    },
    {
      \\"type\\": \\"checkbox\\",
      \\"id\\": \\"blog_show_date\\",
      \\"label\\": \\"Show date\\",
      \\"default\\": true
    }
  ],
  \\"presets\\": [
    {
      \\"name\\": \\"Blog posts\\",
      \\"category\\": \\"Blog\\",
      \\"settings\\": {
        \\"blog\\": \\"News\\",
        \\"post_limit\\": 3
      }
    }
  ]
}
{% endschema %}"
`;

exports[`starter theme structure 1`] = `
Object {
  "../sections/rich-text.liquid": RawSource {
    "_value": "{%- comment -%}
  This is a required section for the Shopify Theme Store.
  It is available when you add \\"Rich text\\" section on the Theme Editor.

  Theme Store required settings
  - Heading: title of the rich text section
  - Text: description of the rich text section
{%- endcomment -%}
<section>
  {%- if section.settings.title != blank -%}
    <h2>{{ section.settings.title | escape }}</h2>
  {%- endif -%}
  {%- if section.settings.text != blank -%}
    <div class=\\"rte\\">
      {{ section.settings.text }}
    </div>
  {%- endif -%}
</section>

{% schema %}
  {
    \\"name\\": \\"Rich text\\",
    \\"settings\\": [
      {
        \\"type\\": \\"text\\",
        \\"id\\": \\"title\\",
        \\"label\\": \\"Heading\\",
        \\"default\\": \\"Talk about your brand\\"
      },
      {
        \\"type\\": \\"richtext\\",
        \\"id\\": \\"text\\",
        \\"label\\": \\"Text\\",
        \\"default\\": \\"<p>Use this text to share information about your brand with your customers. Describe a product, share announcements, or welcome customers to your store.</p>\\"
      }
    ],
    \\"presets\\": [{
        \\"name\\": \\"Rich text\\",
        \\"category\\": \\"Text\\"
    }]
  }
{% endschema %}
",
    "emitted": true,
    "existsAt": "/Users/harshalbrahmbhatt/src/github.com/Shopify/slate/packages/slate-locales-plugin/__tests__/dist/sections/rich-text.liquid",
  },
  "main.js": RawSource {
    "_value": "!function(e){var t={};function r(n){if(t[n])return t[n].exports;var o=t[n]={i:n,l:!1,exports:{}};return e[n].call(o.exports,o,o.exports,r),o.l=!0,o.exports}r.m=e,r.c=t,r.d=function(e,t,n){r.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:n})},r.r=function(e){\\"undefined\\"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:!0})},r.t=function(e,t){if(1&t&&(e=r(e)),8&t)return e;if(4&t&&\\"object\\"==typeof e&&e&&e.__esModule)return e;var n=Object.create(null);if(r.r(n),Object.defineProperty(n,\\"default\\",{enumerable:!0,value:e}),2&t&&\\"string\\"!=typeof e)for(var o in e)r.d(n,o,function(t){return e[t]}.bind(null,o));return n},r.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return r.d(t,\\"a\\",t),t},r.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},r.p=\\"\\",r(r.s=0)}([function(e,t){}]);",
    "emitted": true,
    "existsAt": "/Users/harshalbrahmbhatt/src/github.com/Shopify/slate/packages/slate-locales-plugin/__tests__/dist/assets/main.js",
  },
}
`;

exports[`starter theme structure 2`] = `
"{%- comment -%}
  This is a required section for the Shopify Theme Store.
  It is available when you add \\"Rich text\\" section on the Theme Editor.

  Theme Store required settings
  - Heading: title of the rich text section
  - Text: description of the rich text section
{%- endcomment -%}
<section>
  {%- if section.settings.title != blank -%}
    <h2>{{ section.settings.title | escape }}</h2>
  {%- endif -%}
  {%- if section.settings.text != blank -%}
    <div class=\\"rte\\">
      {{ section.settings.text }}
    </div>
  {%- endif -%}
</section>

{% schema %}
  {
    \\"name\\": \\"Rich text\\",
    \\"settings\\": [
      {
        \\"type\\": \\"text\\",
        \\"id\\": \\"title\\",
        \\"label\\": \\"Heading\\",
        \\"default\\": \\"Talk about your brand\\"
      },
      {
        \\"type\\": \\"richtext\\",
        \\"id\\": \\"text\\",
        \\"label\\": \\"Text\\",
        \\"default\\": \\"<p>Use this text to share information about your brand with your customers. Describe a product, share announcements, or welcome customers to your store.</p>\\"
      }
    ],
    \\"presets\\": [{
        \\"name\\": \\"Rich text\\",
        \\"category\\": \\"Text\\"
    }]
  }
{% endschema %}
"
`;
